@@ -71,6 +71,16 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+	    <h3>April 9th 2007</h3>
+   	      Stable version 0.6.3 released!  This will be the version included by
+   	      GNOME 2.18.1.  This release includes updated translations for the
+   	      following languages:
+   	      <ul>
+   	        <li>Basque (eu), Dzongkha (dz), Estonian (et), Galician (gl),
+                Korean (ko), Spanish (es), Turkish (tr), Ukranian (uk)</li>
+   	      </ul>
+   	      <a href="download.html">Download it</a>
+
 	    <h3>March 12th 2007</h3>
    	      Stable version 0.6.1 released!  This will be the version included by
    	      GNOME 2.18.0.  This release includes updated translations for the
