@@ -1,3 +1,8 @@
+2007-04-10  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* index.html: Updated for 0.6.3 release.
+	* download.html: Ditto.
+
 2007-03-19  Boyd Timothy  <btimothy@gmail.com>
 
 	* index.html: Fixed "higlights" typo (Thanks Tommi).
